--- a/package.json
+++ b/package.json
@@ -10,9 +10,7 @@
         "test-c": "jest --coverage"
     },
     "dependencies": {
-        "-": "^0.0.1",
         "@reduxjs/toolkit": "^1.6.1",
-        "D": "^1.0.0",
         "antd": "^4.16.12",
         "axios": "^0.21.1",
         "core-js": "^3.9.0",
@@ -36,6 +34,7 @@
         "@types/react": "^17.0.19",
         "@types/react-dom": "^17.0.9",
         "@types/react-redux": "^7.1.18",
+        "@types/react-router-dom": "^5.1.8",
         "@typescript-eslint/parser": "^4.28.5",
         "autoprefixer": "^10.3.1",
         "babel-loader": "^8.2.2",
